@@ -54,11 +54,14 @@
    <% @don_attachments.each do |pic| %>
    <% rpath = pic.path ? '/' + pic.path.split(%r!(?:^|/)public/!).last : nil %>
    <tr>
-     <td><%= link_to pic.id, {:controller => 'notes', :action => 'show_image', :id => pic.id} %></td>
+     <td><%= link_to pic.id, {:controller => '/notes', :action => 'show_image', :id => pic.id} %></td>
      <td>
+       <%= pic.id %>
+
        <% pic.articles.each do |pa| %>
        <%= link_to_remote(pa.id, :update => "ca", :url => {:controller => "notes", :action => "pick_article_a", :pickid => pa.id }) %>
        <% end %>
+
      </td>
      <td><%= rpath ? image_tag(rpath, :size => '100') : '' %></td>
      <td>
